# sql-equivalence

./: .gitignore  README.md  pyproject.toml
sql_equivalence/: __init__.py  breaking.py  diff.py  models.py  pipeline.py
sql_equivalence/passes/: alias.py  column_reorder.py  commutativity.py  cte_inline.py  predicate.py  subquery_join.py
tests/: test_advanced.py  test_alias.py  test_breaking.py  test_calcite_benchmarks.py  test_column_analysis.py  test_column_reorder.py  test_commutativity.py  test_cte_inline.py  test_cte_patterns.py  test_edge_cases.py  test_pipeline.py  test_predicate.py  test_subquery_join.py  test_subquery_patterns.py
