[project]
name = "sql-equivalence"
version = "0.1.0"
description = "SQL semantic equivalence checker via algebraic rewriting"
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
